Được tạo bằng Colaboratory

--- a/Chương_7.ipynb
+++ b/Chương_7.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chương 7.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOH96w768eoSf2SWJQfOzWE",
+      "authorship_tag": "ABX9TyOueizwoKzb3hy78WXvj6pO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -94,7 +94,7 @@
         "id": "cF_n1GeRgGOy",
         "outputId": "eb5678b2-7a8c-4360-97dc-7a9d6a611941"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -135,7 +135,7 @@
         "id": "yTNthfR6gUWz",
         "outputId": "c57a139b-ee8e-4bf1-f453-da8998b3f7ea"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -176,7 +176,7 @@
         "id": "hwxTiOmmgdOi",
         "outputId": "e4121006-14e9-41ca-b40d-7e02faf3b541"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -216,7 +216,7 @@
         "id": "rvCHNx76gp22",
         "outputId": "509b8da7-713d-413d-d4b2-ad2f950bd27d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -238,7 +238,7 @@
       "metadata": {
         "id": "GaxiVDhRg0tb"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -250,7 +250,7 @@
       "metadata": {
         "id": "5CVORM_Gg5tX"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -265,7 +265,7 @@
         "id": "OusIDufImlfX",
         "outputId": "bacfb60c-c39f-44dc-e863-f46584836973"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -291,7 +291,7 @@
         "id": "mbMu2eodmofn",
         "outputId": "49d8e4d3-5d3a-4b65-e15b-ae795b1804b8"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -308,11 +308,665 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "Thực hành 6"
       ],
       "metadata": {
         "id": "Nft0V0aHmqMw"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import *"
+      ],
+      "metadata": {
+        "id": "U93aOZU5pkZE"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = Symbol('x')\n",
+        "f = x**(3/2)\n",
+        "f1 = Derivative(f,x).doit()\n",
+        "f1"
+      ],
+      "metadata": {
+        "id": "j661tAcqp0EI",
+        "outputId": "b62ce96f-d21e-4284-aece-0f91678db6c6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.5*x**0.5"
+            ],
+            "text/latex": "$\\displaystyle 1.5 x^{0.5}$"
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d = sqrt(1+f1**2)\n",
+        "d = Integral(d,(x,0,2))\n",
+        "d"
+      ],
+      "metadata": {
+        "id": "XNZ9PftbqIPd",
+        "outputId": "fbc86465-d852-46c0-b058-a5eb5628cf39",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 101
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Integral(1.5*sqrt(x**1.0 + 0.444444444444444), (x, 0, 2))"
+            ],
+            "text/latex": "$\\displaystyle \\int\\limits_{0}^{2} 1.5 \\sqrt{x^{1.0} + 0.444444444444444}\\, dx$"
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d.doit()"
+      ],
+      "metadata": {
+        "id": "zLa-aLgGqeJW",
+        "outputId": "0bd1b0e8-995d-443c-f5f3-ff1a2d2635dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 57
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.52552395244872"
+            ],
+            "text/latex": "$\\displaystyle 3.52552395244872$"
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thực hành 7"
+      ],
+      "metadata": {
+        "id": "E1ZO6NStJW-p"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol, Derivative, solve, Integral\n",
+        "x = Symbol('x')"
+      ],
+      "metadata": {
+        "id": "TcALO1zXJYb3"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "D = E = -8\n",
+        "F = 3\n",
+        "f = D*x**3 + E*x**4 + F*x**5\n",
+        "f"
+      ],
+      "metadata": {
+        "id": "ed8kK4PtJfVp",
+        "outputId": "2bba7c9c-d87c-4cd2-8249-fd70de23a8a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3*x**5 - 8*x**4 - 8*x**3"
+            ],
+            "text/latex": "$\\displaystyle 3 x^{5} - 8 x^{4} - 8 x^{3}$"
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d1 = Derivative(f,x).doit()\n",
+        "d1"
+      ],
+      "metadata": {
+        "id": "iT8DV2xXJx8M",
+        "outputId": "4e7ff45c-b64c-40f3-9fbd-c6aa95050439",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15*x**4 - 32*x**3 - 24*x**2"
+            ],
+            "text/latex": "$\\displaystyle 15 x^{4} - 32 x^{3} - 24 x^{2}$"
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cuctri = solve(d1)\n",
+        "cuctri"
+      ],
+      "metadata": {
+        "id": "D1KYRvZlJ5eU",
+        "outputId": "24e1e3e5-b387-4a64-b399-f269df7cf488",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 16/15 - 2*sqrt(154)/15, 16/15 + 2*sqrt(154)/15]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thực hành 8"
+      ],
+      "metadata": {
+        "id": "YMUxSI3hqjqu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import difference_delta as dd \n",
+        "from sympy.abc import n \n",
+        "dd(n*(n+1), n)"
+      ],
+      "metadata": {
+        "id": "GiqmkBWmICdW",
+        "outputId": "740071e9-dd1f-4e40-b34b-7e9b855d5d4a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2*n + 2"
+            ],
+            "text/latex": "$\\displaystyle 2 n + 2$"
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dd(n*(n+1),n,2)"
+      ],
+      "metadata": {
+        "id": "EOTDKCSYIE19",
+        "outputId": "75c7e23a-7085-4582-eebf-cb39eb4e0712",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4*n + 6"
+            ],
+            "text/latex": "$\\displaystyle 4 n + 6$"
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy.abc import n, k \n",
+        "from sympy import limit_seq \n",
+        "limit_seq((3*n**3+5*n**2+4)/(5*n**3+200*n**2+400), n)"
+      ],
+      "metadata": {
+        "id": "8YR_zyYBIIZp",
+        "outputId": "60f43af6-3dee-42b0-851f-75bc8d2feb17",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3/5"
+            ],
+            "text/latex": "$\\displaystyle \\frac{3}{5}$"
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy.abc import n, k, m\n",
+        "from sympy import Sum  \n",
+        "limit_seq(Sum(k**2 * Sum(2**m/m,(m,1,k)),(k,1,n))/(2**n*n), n)"
+      ],
+      "metadata": {
+        "id": "i2EVfcSvIP-G",
+        "outputId": "759da8b2-8f9d-424f-ee9c-34d8ec969664",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 57
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ],
+            "text/latex": "$\\displaystyle 4$"
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import series \n",
+        "from sympy import Sum \n",
+        "from sympy.series.limitseq import dominant \n",
+        "from sympy.abc import n,k\n",
+        "dominant(n**3+100*n**2+200*n+1, n)"
+      ],
+      "metadata": {
+        "id": "2QyNhVUIIWW9",
+        "outputId": "d48d80be-1b70-4cce-8b88-e5d3ab3578ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "n**3"
+            ],
+            "text/latex": "$\\displaystyle n^{3}$"
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dominant(2**n + Sum(k, (k,0,n)), n)"
+      ],
+      "metadata": {
+        "id": "m6CDex8eIZh2",
+        "outputId": "210b0859-3b89-4098-fb93-69b93485dd64",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 57
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2**n"
+            ],
+            "text/latex": "$\\displaystyle 2^{n}$"
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dominant(n**2 + Sum(k, (k,0,n)), n)"
+      ],
+      "metadata": {
+        "id": "7cQnKm9XIcnO"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dominant(2*n**2 + Sum(k, (k,0,n)), n)"
+      ],
+      "metadata": {
+        "id": "H4iWW3YYIfUr"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dominant(n**3 + Sum(k, (k,0,n)), n)"
+      ],
+      "metadata": {
+        "id": "-HiAMrvsJMXW",
+        "outputId": "961d8443-b3aa-4c95-a960-247e6e7b42df",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "n**3"
+            ],
+            "text/latex": "$\\displaystyle n^{3}$"
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dominant(n*3 + Sum(k, (k,0,n)), n)"
+      ],
+      "metadata": {
+        "id": "t9rHxovKJNf5",
+        "outputId": "0df74f0a-3661-4db9-9760-89d3015cf882",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 89
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Sum(k, (k, 0, n))"
+            ],
+            "text/latex": "$\\displaystyle \\sum_{k=0}^{n} k$"
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dominant(2*n*3 + Sum(k, (k,0,n)), n)"
+      ],
+      "metadata": {
+        "id": "1ETR-pEeJQQ6",
+        "outputId": "a1250aba-cb4a-45cc-fb6c-f0609bda9c74",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 89
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Sum(k, (k, 0, n))"
+            ],
+            "text/latex": "$\\displaystyle \\sum_{k=0}^{n} k$"
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dominant(2*n**3 + Sum(k, (k,0,n)), n)"
+      ],
+      "metadata": {
+        "id": "JwSXAApZJS8G",
+        "outputId": "735da0b2-6d4f-450a-e27b-1c31e8976663",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2*n**3"
+            ],
+            "text/latex": "$\\displaystyle 2 n^{3}$"
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thực hành 9"
+      ],
+      "metadata": {
+        "id": "hheeimwlKIGb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Sum\n",
+        "from sympy.abc import n,k\n",
+        "S = Sum(k, (k,0,n))\n",
+        "S"
+      ],
+      "metadata": {
+        "id": "V4o6WvZtKHDm",
+        "outputId": "39e729b3-8839-4721-c488-d0982eb05a05",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 89
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Sum(k, (k, 0, n))"
+            ],
+            "text/latex": "$\\displaystyle \\sum_{k=0}^{n} k$"
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import limit_seq\n",
+        "limit_seq(S,n)"
+      ],
+      "metadata": {
+        "id": "d8HdL60IKL45",
+        "outputId": "7e0b554e-62e1-449b-f124-5ae01523c56a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 57
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "oo"
+            ],
+            "text/latex": "$\\displaystyle \\infty$"
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol, cos, series\n",
+        "x = Symbol('x')\n",
+        "S1 = series(cos(x), x)\n",
+        "S1"
+      ],
+      "metadata": {
+        "id": "iuSmmyyHKPH0",
+        "outputId": "e997ef58-d10e-42e8-ae8d-62dbbe84f5d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 74
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1 - x**2/2 + x**4/24 + O(x**6)"
+            ],
+            "text/latex": "$\\displaystyle 1 - \\frac{x^{2}}{2} + \\frac{x^{4}}{24} + O\\left(x^{6}\\right)$"
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy.abc import n\n",
+        "e = (1 + 1/n)**n\n",
+        "print(round(e.subs(n, 100).evalf(), 10))"
+      ],
+      "metadata": {
+        "id": "XKbdtuLGKVz0",
+        "outputId": "b5342624-0dc3-43be-a54b-88121de75607",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.7048138294\n"
+          ]
+        }
+      ]
     }
   ]
 }
