Được tạo bằng Colaboratory

--- a/ôn_thi.ipynb
+++ b/ôn_thi.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ôn thi.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOzAJ9G+vmDC/MPjODLuwNV",
+      "authorship_tag": "ABX9TyNN2oCJGclV35ftDkeQNjwg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -487,13 +487,31 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "from sympy import Symbol, sin\n",
+        "Limit(x*sin(1/x),x,S.Infinity).doit()"
       ],
       "metadata": {
-        "id": "sRnrzE-TdRZq"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        },
+        "id": "sRnrzE-TdRZq",
+        "outputId": "e1aba348-5e08-4ed3-9939-3515f4ab7b28"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ],
+            "text/latex": "$\\displaystyle 1$"
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
     }
   ]
 }
